<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="dk.iha.itsmap.f16.grp25.lostandfound.FoundActivity"
    android:weightSum="1.0"
    android:orientation="vertical"
    >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:weightSum="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found_activity"
                    android:id="@+id/textView5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_description"
                    android:id="@+id/textView4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editFoundDescriptionText" />

            </LinearLayout>

            <ImageButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButton"
                android:layout_gravity="right"
                android:src="@drawable/flatcameraicon"
                />

        </LinearLayout>
        <TextView
            android:layout_weight=".1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/Item_tags" />
        <EditText
            android:layout_weight=".1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/editFoundTagsText"
            android:singleLine="true" />
        <Button
            android:id="@+id/locater"
            android:layout_weight=".1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/getlocation" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:weightSum="2.0">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/latitude"
                android:gravity="center_vertical|center" />
            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/txtLat"
                android:singleLine="true"
                android:gravity="center_vertical" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:weightSum="2.0">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/longitude"
                android:gravity="center_vertical|center" />
            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/txtLon"
                android:singleLine="true"
                android:gravity="center_vertical" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:weightSum="2.0">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/accuracy"
                android:gravity="center_vertical|center" />
            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/txtRad"
                android:singleLine="true"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back"
                android:id="@+id/foundBackButton" />
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/submit"
                android:id="@+id/foundSubmitButton" />
        </LinearLayout>

</LinearLayout>
